# qct-parse

./: README.md  makeqctoolsreport.py  overcatch.py  pyproject.toml  qct-parse.py  qct-parse1.py  qct-parse2.py  qct-parse3.py  qct-parse_8bit_config.txt  qct-parse_config.txt  requirements.txt
.github/workflows/: tests.yml
docs/: conf.py  development.md  index.rst
qct_parse/: makeqctoolsreport.py  overcatch.py  qct-parse_10bit_config.txt  qct_parse.py
tests/: test_makeqctoolsreport.py  test_overcatch.py  test_qct_parse.py
